@@ -6,7 +6,10 @@ TODO: maybe implement a default message channel, very much like Erlang's
       but very lacking in others (higher level ipc)).
 
 4.91
-	- typo: new coroutines didn't get created with a zero flags field.
+	- calling ->throw on a not-yet-started coroutine should now work
+          instead of being ignored.
+	- typo: new coroutines didn't get created with a zero flags field
+          (unknown impact).
         - clean up cctx creation code a bit.
 
 4.9  Sat Nov  8 17:45:27 CET 2008
